--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
           </div>
           <form id="courseForm">
             <div class="grid grid-cols-1 gap-5 md:grid-cols-2 mt-5">
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="programmeName" name="programmeName" required placeholder="1. Name of the Programme:" oninput="validateTextInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="department" name="department" required placeholder="2. Department:" oninput="validateTextInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTeacher" name="courseTeacher" required placeholder="3. Name of the Course Teacher/Teachers:" oninput="validateTextInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseCode" name="courseCode" required placeholder="4. Course Code:" oninput="validateNumberInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="semester" name="semester" required placeholder="5. Semester:" oninput="validateNumberInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTitle" name="courseTitle" required placeholder="6. Course Title:" oninput="validateTextInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="academicYear" name="academicYear" required placeholder="7. Academic Year:" oninput="validateNumberInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="batch" name="batch" required placeholder="8. Batch:" oninput="validateNumberInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="coThreshold" name="coThreshold" required placeholder="9. CO Threshold%:" oninput="validateNumberInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="programmeName"  name="programmeName" required placeholder="1. Name of the Programme:" oninput="validateTextInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="department"     name="department"     required placeholder="2. Department:" oninput="validateTextInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTeacher"  name="courseTeacher" required placeholder="3. Name of the Course Teacher/Teachers:" oninput="validateTextInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseCode"     name="courseCode" required placeholder="4. Course Code:" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="semester"       name="semester" required placeholder="5. Semester:" oninput="validateNumberInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="courseTitle"    name="courseTitle" required placeholder="6. Course Title:" oninput="validateTextInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="academicYear" name="academicYear" required placeholder="7. Academic Year: yyyy-yyyy" onblur="validateYearRangeInput(this)" onkeydown="checkEnter(event)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="batch"          name="batch" required placeholder="8. Batch:" onblur="validateYearRangeInput(this)" onkeydown="checkEnter(event)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="coThreshold"    name="coThreshold" required placeholder="9. CO Threshold%:" oninput="validateNumberInput(this)" />
               <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="targetPercentage" name="targetPercentage" required placeholder="10. Institute Target Percentage:" oninput="validateNumberInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalCO" name="totalCO" required placeholder="11. Number of COs:" oninput="validateNumberInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPO" name="totalPO" required placeholder="12. Number of POs:" oninput="validateNumberInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPSO" name="totalPSO" required placeholder="13. Number PSO:" oninput="validateNumberInput(this)" />
-              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="TotalMarks" name="TotalMarks" required placeholder="14. SEE Marks:" oninput="validateNumberInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalCO"        name="totalCO" required placeholder="11. Number of COs:" oninput="validateNumberInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPO"        name="totalPO" required placeholder="12. Number of POs:" oninput="validateNumberInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="totalPSO"       name="totalPSO" required placeholder="13. Number PSO:" oninput="validateNumberInput(this)" />
+              <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline" type="text" id="TotalMarks"     name="TotalMarks" required placeholder="14. SEE Marks:" oninput="validateNumberInput(this)" />
             </div>
             <div class="my-2 w-1/2 lg:w-1/4 mx-auto">
               <button class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-full focus:outline-none focus:shadow-outline" type="submit" >
@@ -54,19 +54,9 @@
       </div>
     </div>
 
-    <!-- ISA Mapping Form -->
-    <div>
-      <div class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white">
-        <div class="my-2 flex">
-          <input type="file" id="fileInput" class="bg-gray-200 shadow-xl p-2 rounded-l-lg focus:outline-none flex-grow mr-4" />
-          <button id="loadButton" class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-r-lg focus:outline-none">
-            Load Excel
-          </button>
-        </div>
-      </div>
-    </div>
+   
 
-    <div class="flex flex-col lg:flex-row">
+    <div class="flex flex-col lg:flex-row mt-10">
       <div id="PoInputs" class="w-full p-8 my-4 mx-8 rounded-2xl shadow-2xl bg-white hidden" >
         <div id="poInputsContainer">
           <div class="flex justify-center items-center">
@@ -117,6 +107,18 @@
 
     <!-- Table 7 -->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView7" ></div>
+
+     <!-- Excel Load Button -->
+     <div>
+      <div id="ExcelInput" class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white hidden">
+        <div class="my-2 flex">
+          <input type="file" id="fileInput" class="bg-gray-200 shadow-xl p-2 rounded-l-lg focus:outline-none flex-grow mr-4" />
+          <button id="loadButton" class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-r-lg focus:outline-none">
+            Load Excel
+          </button>
+        </div>
+      </div>
+    </div>
 
     <!-- Table 1 CIE Marks Entry-->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView1" ></div>
